# RAS

./: .gitignore  README.md  create_test_file.py  dev_execute-cli.txt  main.py  pyproject.toml  task.ipynb  todolist.txt
config/: config.json
output/: report_2025-11-04.html
src/: remove.py  task.py
templates/: pdf_templates.md
